--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: darkred;
+  background-image: linear-gradient(darkred, darkcyan);
   height: 150px;
   padding: 20px;
   color: white;
