--- a/src/components/owner/owner.css
+++ b/src/components/owner/owner.css
@@ -18,3 +18,9 @@
     margin: 12px 0 0 0;
     font-size: 0.7em;
 }
+
+.ownerButton {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 0 10px 0;
+}
