--- a/src/components/location/location.css
+++ b/src/components/location/location.css
@@ -18,3 +18,9 @@
     margin: 12px 0 0 0;
     font-size: 0.7em;
 }
+
+.employeeList {
+    margin: 12px;
+    padding: 3px;
+    list-style-type: none;
+}
